- Added 'Equalize locally' slider to apply very powerful HDR alike contrast enhancement (from G'MIC Equalize local histograms)
- Released the first linux distribution
- Added dispersion deviation indicators to the dispersion corrector
- Fixed bug in histogram not opening for monochrome image stacks
- More compact layout
- Revised processing core, resulting in a better (more quiet) user experience
- Upgraded frontend & backend dependencies to the latest versions.

03/10/2023 minor release 4.8.0:
- Added new slider for controlling the dering threshold
- Added radio controls to open stack at different scales
- Added new slider to reduce purple fringing
- Added stop button to the batch worker
- Improved the startup experience
- Several UI layout improvements
- Shortcut automatically added to the desktop during installation
- Several bugfixes

13/08/2023 minor release 4.3.0-beta:
- Realtime function is now off by default
- Apply profile now saves results in a subfolder called 'lsw_<profile>'
- Added histogram window
- Added checkboxes to luminance sharpen to include/exclude specific channels (red, green, blue, color)
- Fixed issue with local contrast causing artefacts under certain conditions in combination with RGB sharpen
- Fixed issue with RGB align causing line artefacts under certain conditions
- Refactored backend java code
- Upgraded java backend to the latest spring boot version, also upgraded other dependencies.

07/05/2023 revision release 4.0.1:
- Fixed ".tiff" not being accepted as valid extension.
- Fixed dispersion correction issue.
- Fixed switching denoise or edge artefact switch off not always switching off.
- Added ".jpeg" as an allowed extension (common on MacOS).

21/04/2023 major release 4.0.0-beta:
- Added new method for removal of the edge ring artefact happening on planet surfaces.
- Added new sliders to control local contrast on fine, medium and large details
- Splitted up the tabs in 3: Sharpen & Denoise, Contrast & Light, Color & Dispersion.