@@ -7,7 +7,6 @@ rm -rf LuckyStackWorker-linux-x64
 npx electron-packager . lsw-gui --platform linux --arch x64 --icon ../luckystackworker_icon.png --overwrite
 mv lsw-gui-linux-x64 LuckyStackWorker-linux-x64
 cp ../backend/target/luckystackworker-$1.jar ./LuckyStackWorker-linux-x64
-cp -R ./linux/* ./LuckyStackWorker-linux-x64
 cd ./LuckyStackWorker-linux-x64/resources/app
 rm -rf node_modules
 rm -rf src
