@@ -1,23 +1,0 @@
-Lucky Stack Worker  --  v5 for Linux
-
-INSTALL
-
-You can extract the zip file into any folder, eg: your Downloads folder
-
-open a Terminal window and paste:
-
-cd ~/Downloads/LuckyStackWorker/lsw-5.0.0-linux-x64 
-
-run the lsw-setup script: ./lsw-setup  (you will need your 'sudo' password)
-
-files are copied into /opt/LuckyStackWorker, and shortcuts are created on 
-Desktop and in the App Menu
-
-You may now delete the LuckyStackWorker folder you extracted from the zip
-
-
-UN-INSTALL
-
-run the lsw-uninstall script in a Terminal
-
-it will remove everything EXCEPT your data and log files, which remain in Home/.lsw
