@@ -1,31 +1,0 @@
-#!/bin/bash
-
-# # # # # # # # # # # # # # # # # # # # # # # # #
-#                                               #
-#   LuckyStackWorker uninstall script for Linux #
-#                                               #
-# # # # # # # # # # # # # # # # # # # # # # # # #
-##
-##  COMMANDLINE: $ sudo ./lsw-uninstall
-##
-
-_APP="LuckyStackWorker"
-_VER="lsw-5.0.0-linux-x64"
-_ROOT=opt
-_LSW_FOLDER=/$_ROOT/$_APP/$_VER
-
-# make sure we're running with elevated privileges
-SUDO=''
-if (( $EUID != 0 )); then
-    SUDO='sudo'
-fi
-#$SUDO a_command
-
-$SUDO rm -rf /$_ROOT/$_APP
-$SUDO rm /usr/share/applications/LuckyStackWorker.desktop 
-$SUDO rm /usr/share/icons/hicolor/256x256/apps/LuckyStackWorker.png 
-$SUDO rm ~/Desktop/LuckyStackWorker.desktop 
-
-echo "LuckyStackWorker Removed"
-echo "Logs and Data files still remain in Home/.lsw"
-echo
